review bower dependencies

--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,10 @@
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-
         <!-- build:css styles/vendor.css -->
         <!-- bower:css -->
+        <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -24,6 +22,7 @@
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
+        <script src="../bower_components/jquery/dist/jquery.js"></script>
         <script src="../bower_components/x-tag-core/lib/web-components-polyfills.js"></script>
         <script src="../bower_components/x-tag-core/src/core.js"></script>
         <script src="../bower_components/WeakMap/WeakMap.js"></script>
@@ -34,11 +33,10 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="../bower_components/base64/base64.js"></script>
         <script src="../bower_components/classlist/classList.js"></script>
-        <script src="../bower_components/html5shiv-dist/html5shiv.js"></script>
         <script src="../bower_components/requestAnimationFrame-polyfill/requestAnimationFrame.js"></script>
-        <script src="../bower_components/x-mixin-templated/src/x-mixin-templated.js"></script>
         <script src="../bower_components/HTMLImports/src/html-imports.js"></script>
 
+        <script src="../bower_components/x-mixin-templated/src/x-mixin-templated.js"></script>
         <script src="../bower_components/cqrsjs-master/src/cqrs.js"></script>
 
         <script src="scripts/aggregate-item.js"></script>
